--- a/index.html
+++ b/index.html
@@ -841,6 +841,11 @@
            "name": "Туры выходного дня Новый Поворот",
            "logo": "https://novipovorot.pp.ua/images/novi-povorot.jpg",
            "url": "https://novipovorot.pp.ua",
+           "potentialAction": {
+                  "@type": "SearchAction",
+                  "target": "{search_term_string}",
+                  "query-input": "required name=search_term_string"
+           },
            "contactPoint": {
                   "@type": "ContactPoint",
                   "telephone": "+380506702264",
