--- a/index.html
+++ b/index.html
@@ -841,11 +841,21 @@
            "name": "Туры выходного дня Новый Поворот",
            "logo": "https://novipovorot.pp.ua/images/novi-povorot.jpg",
            "url": "https://novipovorot.pp.ua",
-           "potentialAction": {
+            "potentialAction": {
                   "@type": "SearchAction",
                   "target": "{search_term_string}",
                   "query-input": "required name=search_term_string"
            },
+           "@type": "TravelAgency",
+           "name": "Новый Поворот",
+           "image": "https://novipovorot.pp.ua/images/novi-povorot.jpg",
+           "telephone": "+380506702264",
+           "telephone": "+380985771579",
+           "address": {
+                "@type": "PostalAddress",
+                "addressLocality": "Zaporizhzhya",            
+                "addressCountry": "UA"
+            },          
            "contactPoint": {
                   "@type": "ContactPoint",
                   "telephone": "+380506702264",
