--- a/booking.html
+++ b/booking.html
@@ -140,6 +140,7 @@
                             </div>
                             <div class="col-md-12 form-group contact-forms">
                                 <select name="Тур" class="form-control" id="#">
+                                    <option>Выбрать Тур</option>
                                     <option>Зоопарк Харьков и Фентези Парк</option>
                                     <option>Каменец Подольский и Умань</option>
                                     <option>28 Лошадок и Симба</option>
