--- a/booking.html
+++ b/booking.html
@@ -120,7 +120,7 @@
                             </div>
                             <div class="col-sm-6 form-group contact-forms">
                                 <select name="Взрослые люди" class="form-control" id="adults">
-                                    <option>Взрослые люди</option>
+                                    <option disabled>Взрослые люди</option>
                                     <option>1</option>
                                     <option>2</option>
                                     <option>3</option>
@@ -130,7 +130,7 @@
                             </div>
                             <div class="col-sm-6 form-group contact-forms">
                                 <select name="Дети" class="form-control" id="kids">
-                                    <option>Дети</option>
+                                    <option disabled>Дети</option>
                                     <option>1</option>
                                     <option>2</option>
                                     <option>3</option>
