--- a/booking.html
+++ b/booking.html
@@ -120,7 +120,7 @@
                             </div>
                             <div class="col-sm-6 form-group contact-forms">
                                 <select name="Взрослые люди" class="form-control" id="adults">
-                                    <option disabled>Взрослые люди</option>
+                                    <option>Взрослые люди</option>
                                     <option>1</option>
                                     <option>2</option>
                                     <option>3</option>
@@ -130,7 +130,7 @@
                             </div>
                             <div class="col-sm-6 form-group contact-forms">
                                 <select name="Дети" class="form-control" id="kids">
-                                    <option disabled>Дети</option>
+                                    <option>Дети</option>
                                     <option>1</option>
                                     <option>2</option>
                                     <option>3</option>
@@ -140,7 +140,7 @@
                             </div>
                             <div class="col-md-12 form-group contact-forms">
                                 <select name="Тур" class="form-control" id="#">
-                                    <option disabled>Выбрать Тур</option><!--Выбрать Тур-->
+                                    <option>Выбрать Тур</option><!--Выбрать Тур-->
 
                                     <option>Зоопарк Харьков и Фентези Парк</option>
                                     <option>Каменец Подольский и Умань</option>
