--- a/packages.html
+++ b/packages.html
@@ -845,7 +845,8 @@
     <script src="./libs/jquery-3.5.1.js"></script>
     <script src="./libs/popper.min.js"></script>
     <script src="./libs/bootstrap.min.js"></script>
-
+    <script src="./libs/buzinaPagination/buzina-pagination.min.js"></script>
+    
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init({
