--- a/packages.html
+++ b/packages.html
@@ -34,6 +34,9 @@
     <!-- aos.css files -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" type="text/css" />
     <!-- //aos.css files -->
+    <!-- buzinaPagination -->
+    <link rel="stylesheet" href="./libs/buzinaPagination/buzina-pagination.min.css">
+    <!-- //buzinaPagination -->
     <!-- google fonts -->
     <link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i"
         rel="stylesheet">
@@ -41,7 +44,7 @@
         href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
     <!-- //google fonts -->
-
+    
 </head>
 
 <body>
