--- a/packages.html
+++ b/packages.html
@@ -887,6 +887,15 @@
         })('https://widget.replain.cc/dist/client.js');
     </script>
 
+    <!-- buzinaPagination -->    
+    <script>
+      $(document).ready(function () {
+        $('#uniqueId').buzinaPagination({
+          itemsOnPage:8
+        });
+      });
+    </script>
+    
 </body>
 
 </html>
