--- a/packages.html
+++ b/packages.html
@@ -131,7 +131,7 @@
                                Арабатские термы и Розовое озеро
                             </a>
                         </h5>
-                        <p>
+                        <p class="text-truncate">
                            Арабатские термы и Розовое озеро...
                         </p>
                         <ul class="listing mt-3">
@@ -157,7 +157,7 @@
                               Новогодние огни Днепра
                             </a>
                         </h5>
-                        <p>Круче чем в Париже! Лучшие новогодние украшения страны!  </p>
+                        <p class="text-truncate">Круче чем в Париже! Лучшие новогодние украшения страны!  </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 16 Января </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
@@ -181,7 +181,7 @@
                                 Лимонарий
                             </a>
                         </h5>
-                        <p>Экскурсия в Лимонный сад с Новым поворотом </p>
+                        <p class="text-truncate">Экскурсия в Лимонный сад с Новым поворотом </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>  22 Января </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
@@ -205,7 +205,7 @@
                                28 Лошадок и Симба
                             </a>
                         </h5>
-                        <p>Экскурсия Конный комплекс и зоопарк Симба с Новым поворотом </p>
+                        <p class="text-truncate">Экскурсия Конный комплекс и зоопарк Симба с Новым поворотом </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>  23 Января </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
@@ -231,7 +231,8 @@
                             </a>
                         </h5>
                         <p>
-                         Самый крутой зоопарк-сафари страны! Настоящий водопад и живой слон, малыш жирафик, милашки пингвинчики, огромнейший бегемот, розовые пеликаны и фламинго...
+                         Самый крутой зоопарк-сафари страны! Настоящий водопад и живой слон, малыш жирафик,
+                            милашки пингвинчики, огромнейший бегемот, розовые пеликаны и фламинго...
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>  29 Января </span></li>
@@ -257,7 +258,7 @@
                                Сырная ферма с дегустацией
                             </a>
                         </h5>
-                        <p>
+                        <p class="text-truncate">
                            Сырная ферма с дегустацией...
                         </p>
                         <ul class="listing mt-3">
@@ -284,7 +285,7 @@
                                Каменец Подольский и Умань
                             </a>
                         </h5>
-                        <p>
+                        <p class="text-truncate">
                            Этот город завораживает своими обрывистыми каньонами, старинными улочками и восхитительным замком!
                         </p>
                         <ul class="listing mt-3">
@@ -311,7 +312,7 @@
                                 Карпаты 2022
                             </a>
                         </h5>
-                        <p>
+                        <p class="text-truncate">
                             Только покоряя во время катания эти вершины, ты ощущаешь дух Карпат!...
                         </p>
                         <ul class="listing mt-3">
@@ -337,7 +338,7 @@
                                 Мурляндия
                             </a>
                         </h5>
-                        <p>Экскурсия в Лимонный сад с Новым поворотом </p>
+                        <p class="text-truncate">Экскурсия в Лимонный сад с Новым поворотом </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 15 Января 2022 </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
@@ -361,7 +362,7 @@
                                 Хортица
                             </a>
                         </h5>
-                        <p>Тайны и загадки родного острова Хортица... </p>
+                        <p class="text-truncate">Тайны и загадки родного острова Хортица... </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 12 Декабря </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
@@ -386,7 +387,7 @@
                             Дай лапу
                             </a>
                         </h5>
-                        <p>
+                        <p class="text-truncate">
                           Экскурсия в благотворительный фонд помощи животным...
                         </p>
                         <ul class="listing mt-3">
@@ -410,7 +411,7 @@
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-wine.html">Вино</a>
                         </h5>
-                        <p>Экскурсия и дегустация на винном заводе</p>
+                        <p class="text-truncate">Экскурсия и дегустация на винном заводе</p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Сентябрь-Декабрь 2021 Года</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
