--- a/packages.html
+++ b/packages.html
@@ -1379,7 +1379,8 @@
      -->
     <section class="destinations py-5" id="destinations">
         <div class="container py-xl-5 py-lg-3">
-            <h3 class="heading text-capitalize text-center" data-aos="zoom-in"> Популярные Направления</h3>
+            <!--<h3 class="heading text-capitalize text-center" data-aos="zoom-in"> Популярные Направления</h3>-->
+            <h3 class="heading text-capitalize text-center">Популярные Направления</h3>
             <p class="text mt-2 mb-5 text-center">Туры выходного дня "Новый Поворот"</p>
             <div class="row inner-sec-w3layouts-w3pvt-lauinfo">
 
