--- a/packages.html
+++ b/packages.html
@@ -1377,7 +1377,7 @@
    <!-- 
         ***  Популярные Направления  ***
      -->
-    <section class="destinations py-5" id="destinations">
+    <section class="destinations" id="destinations">
         <div class="container py-xl-5 py-lg-3">
             <!--<h3 class="heading text-capitalize text-center" data-aos="zoom-in"> Популярные Направления</h3>-->
             <h3 class="heading text-capitalize text-center">Популярные Направления</h3>
