--- a/packages.html
+++ b/packages.html
@@ -91,7 +91,7 @@
 
     <!-- Туры -->
 
-    <section class="packages py-5">
+    <section class="packages pt-5">
 
         <div class="container py-lg-4 py-sm-3">
 
