--- a/packages.html
+++ b/packages.html
@@ -214,8 +214,7 @@
                 </div>               
                 <!--  //28 Лошадок и Симба -->
                                                                  
-<!-- Зоопарк Харьков и Фентези парк  -->
-                    
+                <!-- Зоопарк Харьков и Фентези парк  -->    
                 <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-Zoo-Kharkiv.html">
@@ -230,8 +229,7 @@
                                 Зоопарк Харьков и Фентези парк
                             </a>
                         </h5>
-                        <p class="text-truncate">Самый крутой зоопарк-сафари страны! Настоящий водопад и живой слон, малыш жирафик,
-                            милашки пингвинчики, огромнейший бегемот, розовые пеликаны и фламинго... </p>
+                        <p class="text-truncate">Самый крутой зоопарк-сафари страны!</p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>  29 Января </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
