--- a/page-Georgia-summer.html
+++ b/page-Georgia-summer.html
@@ -4,73 +4,78 @@
 	<script>
 		
 	    //Заголовок
-	    let title = "Title тура ";			
+	    let title = "Грузия лето ";			
 	    // Описание 
-	    let descriptionHead = "Туры выходного дня - Новый поворот, ОПИСАНИЕ  ";		
+	    let descriptionHead = "Туры выходного дня - Новый поворот, Грузия лето.  Увидеть все от моря до гор и обратно.   ";		
 	    //Ключевые слова
-	    let keywords = "Запорожье, Новый Поворот Запорожье, Путешествия, Туризм, Ключевые слова ";		
+	    let keywords = "Запорожье, Новый Поворот Запорожье, Путешествия, Туризм, Грузия, туры в Грузию, Батуми из Запорожья ";		
 	    //Cсылкa Tура 
-	    let linkPage = "https://novipovorot.pp.ua/page-example.html";		
+	    let linkPage = "https://novipovorot.pp.ua/page-Georgia-summer.html";		
 	    //Картинка
-	    let imgInTour = "https://picsum.photos/825/473";		
+	    let imgInTour = "./images/Georgia-summer/inside-Georgia.jpg";		
 	    //Дата тура
-	    let dateTour = "2022";		
+	    let dateTour = "2-9 июля 2022";		
 	    //Подзаголовок
-	    let subtitle = "Подзаголовок";		
+	    let subtitle = "Грузия лето.  Увидеть все от моря до гор и обратно";		
 	   //Описание прогарммы тура
 	   let tourProgramDescription = [
-		{program: 'Описание1'}, 
-	        {program: 'Описание2'}, 
-		{program: 'Описание3'}, 
-		{program: 'Описание4'}
+		{program: 'Теплое июльское море, красивейшие виды современного Батуми. Ароматы цветов и шашлыков , мм ... Это изюминки Грузии.'}, 
+	        {program: 'Мы побываем в целебных купальнях Боржоми.Пройдемся по Хрустальному мосту Тбилиси и побываем в знаменитых серных банях. '}, 
+		{program: 'Горная Местия, поразит нас грузинским гостеприимством и радушием. '}, 
+		{program: 'А сокральная Мцхета наполнит наши души... Мест мало! Поспеши! Это будет лучшее путешествие 2022 года!'}
 	   ];		
 	  //Информируем
           let inform = [
-		{informPrice: 'Цена билета до ...: взрослые ... грн., дети от 3 до 12 лет ... грн., дети от 13 до 17 лет ... грн.'}, 
-	        {informPrice: 'С ...: взрослые ... грн., дети от 3 до 12 лет ... грн.; дети от 13 до 17 лет ... грн.'}, 
-		{informPrice:  '*Примечание: До 5 лет без места в транспорте бесплатно.'}
+		{informPrice: '385дол(10780грн на 14,01)+авиа перелет,  предоплата 1000грн .'}, 
+	        {informPrice: 'Бронирование нужно сделать как-можно раньше (идеально в феврале-марте) чтоб выкупить билеты по наиболее низкой цене(в среднем общая цена за чел/перелет от 4500 до 5500 грн в обе стороны )'}, 
+		{informPrice:  '*Внимание! Обязательно наличие загран паспорта (стандарт или биометрический)и документов по вакцинации /тест/справка. Нац.валюта лари, можно брать с собой доллары или евро, гривны поменять на месте сложно!  Сразу нужны будут деньги на авиа-билеты!'}
 	   ];	
 	   //Стоимость
-	   let price = "1000 Грн.";		
+	   let price = "10780 Грн.";		
 	   //Продолжительность
-	   let duration	= "1 День";	
+	   let duration	= "8 Дней";	
 	   //Описание тура
 	   let descTours = [
-		{time: '09:01', description: 'Описание1'}, 
-		{time: '09:02', description: 'Описание2'}, 
-		{time: '09:03', description: 'Описание3'}, 
-		{time: '18:00', description: 'Мы уже в Запорожье, довольные возвращаемся домой чтоб поделиться впечатлениями с друзьями и близкими (но еще лучше их взять с собой).'}
+		{time: '2 июля', description: 'вылет 15:55  Запорожье-Батуми. Прилет 19:05. Встреча и заселение в гостиницу. Свободное время для купания и прогулки по Батуми.К туру можно присоединиться с любого города Украины. Будем рады новым знакомствам.'}, 
+		{time: '3 июля', description: 'Экскурсия по Батуми от самых колоритных грузинских экскурсоводов. Мы узнаем местные секреты и самые лучшие места города. Самый большой и красивый ботанический сад ! Вы такого еще нигде не видели. Розовые деревья, огромные пальмы, и красивейшие видовые утесы с морем.. '}, 
+		 {time: '4 июля', description: 'Боржоми. Купание в целебнейших источниках, огромнейший водопад, прогулка на фуникулере чтоб увидеть с высоты всю эту красоту. '}, 
+		   {time: '5 июля', description: 'Хрустальный мост,древнейшие храмы старинные улочки центра Тбилиси это сказка. А знаменитые серные бани обязательно нужно посетить, ведь это поистине уникальное место.  По-желанию посещение древнейших храмов в Мцхете Монастырь Джавари и Кафедральный собор Светицховели)! '}, 
+		   {time: '6 июля', description: 'едем в Местию. Это дух гор и красивее места нет...'}, 
+		   {time: '7 июля', description: 'Мы побываем в сердце горной Грузии. Отведаем самого первозданного грузинского колорита, может его зовут Чача ;) Прогуляемся к настоящему леднику и ощутим дух времени...'}, 
+		   {time: '8 июля ', description: 'возвращаемся к морю чтоб получить максимум Солнца, соли и кайфа. '}, 
+		   {time: '9 июля', description: 'поздний вылет чтоб впитать в себя Грузию до капли как бокал прекрасного вина. 19:55 вылет'}, 
+		   {time: '21:15', description: 'Мы уже в Запорожье. Возможен возврат в другие города Украины. Довольные возвращаемся домой чтоб поделиться впечатлениями с друзьями и близкими (но еще лучше их взять с собой).'}
 	   ];		
 	  //В стоимость входит
 	  let includedInThePrice = [
-		{includePrice: 'Описание1'}, 
-	        {includePrice: 'Описание2'}, 
-		{includePrice: 'Описание3'}, 
-		{includePrice: 'Описание4'}
+		{includePrice: 'Проживание 7 ночей в номерах стандарт по 2 чел удобства в номере'}, 
+	        {includePrice: 'Питание : завтраки,'}, 
+		{includePrice: 'Проезд по всем экскурсионным объектам и входные билеты программе; '}, 
+		{includePrice: 'экскурсионное сопровождение с грузинским колоритом и открытым сердцем;  '}, 
+		{includePrice: 'супер-позитивное сопровождение представителя  Нового поворота;  '}, 
+		{includePrice: 'чудесные ощущения от экскурсии и полный кайф от Грузии'}
 	   ];	
 	  //В стоимость не входит
 	  let priceDoesNotInclude = [
-		{doesNotIncludePrice: 'Описание1'}, 
-	        {doesNotIncludePrice: 'Описание2'}, 
-		{doesNotIncludePrice: 'Описание3'}, 
-		{doesNotIncludePrice: 'Описание4'}
-	   ];	
+		{doesNotIncludePrice: 'Авиа перелет (4500-5500грн чем раньше, тем дешевле ); '}, 
+	        {doesNotIncludePrice: 'Питание обеды/ужины/шашыки-перекусы цены как у нас в стандартных кафе/ресторанах потому с собой берите столько, сколько кушаете хорошо нагуляв аппетит. '} 	   ];	
 	  //Тексты подсказок
 	  let helpTexts = [
 		{badge: 'Запорожье'}, 
 	        {badge: 'Новый Поворот Запорожье'}, 
 		{badge: 'Путешествия'}, 
+		  {badge: 'Грузия'}, 
 		{badge: 'Туризм'}
 	   ];
 		
 	</script> 
 
 	<!-- Open Graph -->
-        <meta property="og:title" content="28 Лошадок и Симба">
-        <meta property="og:description" content="Туры выходного дня - Новый поворот, 28 лошадок и зоопарк Симба. Лучший выходной!" />
+        <meta property="og:title" content="Грузия лето">
+        <meta property="og:description" content="Туры выходного дня - Новый поворот, Грузия лето.  Увидеть все от моря до гор и обратно" />
         <meta property="og:type" content="website" />
-	<meta property="og:image" content="./images/Horses-Zaporizhzhia/inside-horses-zaporizhzhia.jpg">
-        <meta property="og:url" content="https://novipovorot.pp.ua/page-Horses-Zaporizhzhia.html" />
+	<meta property="og:image" content="./images/Georgia-summer/inside-Georgia.jpg">
+        <meta property="og:url" content="https://novipovorot.pp.ua/page-Georgia-summer.html" />
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
