--- a/page-wine.html
+++ b/page-wine.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-    <title>Вино | Новый поворот</title>
+    <title>Винная экскурсия | Новый поворот</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="description"
@@ -12,7 +12,7 @@
         content="Натуральное вино, Экскурсия на винный завод, Дегустация вина и улиток, Вина Запорожья, Винный завод Запорожья" />
     
     <!-- Open Graph data-->
-    <meta property="og:title" content="Вино">
+    <meta property="og:title" content="Винная экскурсия">
     <meta property="og:description" content="Экскурсия на винный завод" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://novipovorot.pp.ua/page-wine.html" />
@@ -102,7 +102,7 @@
                 <!-- //Хлебные крошки -->
 
                 <div class="col-lg-8 col-xl-9 main-title-text">
-                    <h3 class="title">Вино</h3>
+                    <h3 class="title">Винная экскурсия</h3>
                 </div>
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
                     <img src="images/wine-max.jpg" alt="news image" class="img-fluid">
@@ -110,7 +110,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>Июнь-Август 2021 Года</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>Январь- Апрель 2022 Года</span>
                                 </li>
                             </ul>
                         </div>
@@ -142,8 +142,8 @@
                             <span class="fa fa-info-circle"></span><strong> Информируем</strong><br />
                             <span class="txt-alg-jf">
 
-                                10 видов вин плюс улитки 360 грн.<br />
-                                5 видов вин плюс улитки 300 грн.<br />
+                                10 видов вин плюс улитки 500 грн.<br />
+                                5 видов вин плюс улитки 400 грн.<br />
                                 Предоплата 100 грн.
                                 Время 11:00 и 16:00, при бронировании уточняйте дату, время и наполнение эскурсии!
                             </span>
@@ -151,7 +151,7 @@
                         <!-- //Alert info -->
 
                         <ul class="listing">
-                            <li><span class="fa fa-tags mr-2"></span> Стоимость: <span>300-360 Грн.</span></li>
+                            <li><span class="fa fa-tags mr-2"></span> Стоимость: <span>400-500 Грн.</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span> Продолжительность: <span>1 День</span></li>
                             <br />
                             <li><span class="fa fa-bus mr-2"></span> Маршрутки: <span> 61, 82, 95</span></li>
@@ -231,26 +231,25 @@
                         <ul class="list-group listing">
                             <li class="list-group-item active"> Расписание экскурсий: </li>
                             <li class="list-group-item">
-                                <span class="fa fa-calendar mr-2"></span> 04 Сентября 2021
+                                <span class="fa fa-calendar mr-2"></span> 22 Января 2022
                             </li>
                             <li class="list-group-item">
-                                <span class="fa fa-calendar mr-2"></span> 11 Сентября 2021
+                                <span class="fa fa-calendar mr-2"></span> 29 Января 2022
                             </li>
-                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 18 Сентября 2021</li>
-                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 25 Сентября 2021</li>
-                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 02 Октября 2021 </li>
-                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 09 Октября 2021 </li>
-                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 16 Октября 2021 </li>
-                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 23 Октября 2021 </li>
-                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 30 Октября 2021 </li>
-                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 06 Ноября 2021 </li>
-                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 13 Ноября 2021 </li>
-                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 20 Ноября 2021 </li>
-                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 27 Ноября 2021 </li>
-                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 4 Декабря 2021 </li>
-                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 11 Декабря 2021 </li>
-                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 18 Декабря 2021 </li>
-                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 25 Декабря 2021 </li>
+                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 5 Февраля 2022</li>
+                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 12 Февраля 2022</li>
+                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 19 Февраля 2022 </li>
+                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 26 Февраля 2022 </li>
+                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 5 Марта 2022 </li>
+                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 12 Марта 2022 </li>
+                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 19 Марта 2022 </li>
+                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 26 Марта 2022 </li>
+                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 2 Апреля 2022 </li>
+                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 9 Апреля 2022 </li>
+                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 16 Апреля 2022 </li>
+                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 23 Апреля 2022 </li>
+                            <li class="list-group-item"> <span class="fa fa-calendar mr-2"></span> 30 Апреля 2022 </li>
+                            
                         </ul>
 
                         <hr>
