--- a/page-Georgia-summer.html
+++ b/page-Georgia-summer.html
@@ -26,7 +26,7 @@
 	   ];		
 	  //Информируем
           let inform = [
-		{informPrice: '385дол(10780грн на 14,01)+авиа перелет,  предоплата 1000грн .'}, 
+		{informPrice: 'Стоимость : 385дол(10780грн на 14,01)+авиа перелет,  предоплата 1000грн .'}, 
 	        {informPrice: 'Бронирование нужно сделать как-можно раньше (идеально в феврале-марте) чтоб выкупить билеты по наиболее низкой цене(в среднем общая цена за чел/перелет от 4500 до 5500 грн в обе стороны )'}, 
 		{informPrice:  '*Внимание! Обязательно наличие загран паспорта (стандарт или биометрический)и документов по вакцинации /тест/справка. Нац.валюта лари, можно брать с собой доллары или евро, гривны поменять на месте сложно!  Сразу нужны будут деньги на авиа-билеты!'}
 	   ];	
