--- a/packages-page-three.html
+++ b/packages-page-three.html
@@ -116,6 +116,33 @@
             <p class="text mt-2 mb-5 text-center"> Туры выходного дня "Новый Поворот" </p>
             <div class="row">
                 
+                <!--  Арабатские термы и Розовое озеро  -->
+                <div class="col-lg-3 col-sm-6 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-Arabat-baths.html">
+                            <img src="images/Arabat-baths/home-Arabat-baths.jpg" alt="baloon-fast"
+                                class="img-fluid" />
+                        </a>
+                        <p><span class="fa fa-tags"></span> <span>900грн.</span></p>
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Арабатская стрелка</h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-Arabat-baths.html">
+                               Арабатские термы и Розовое озеро
+                            </a>
+                        </h5>
+                        <p class="text-truncate">
+                           Арабатские термы и Розовое озеро...
+                        </p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 15 Января </span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--  //Арабатские термы и Розовое озеро  -->         
+                
                 <!-- Рождество Харьков и Полтава  -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
