--- a/packages.html
+++ b/packages.html
@@ -327,7 +327,7 @@
                         <a href="https://novipovorot.pp.ua/page-wine.html">
                             <img src="images/wine-min.jpg" alt="Wine" class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>360грн.</span></p>
+                        <p><span class="fa fa-tags"></span> <span>400-500грн.</span></p>
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
