--- a/packages.html
+++ b/packages.html
@@ -132,7 +132,7 @@
                             </a>
                         </h5>
                         <p>
-                           Арабатские термы и Розовое озеро...
+                          Удивительное творение природы
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 15 Января </span></li>
@@ -157,7 +157,7 @@
                               Новогодние огни Днепра
                             </a>
                         </h5>
-                        <p>Круче чем в Париже! Лучшие новогодние украшения страны!  </p>
+                        <p>Круче чем в Париже! </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 16 Января </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
@@ -181,7 +181,7 @@
                                 Лимонарий
                             </a>
                         </h5>
-                        <p>Экскурсия в Лимонный сад с Новым поворотом </p>
+                        <p>Экскурсия в Лимонный сад </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>  22 Января </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
@@ -205,7 +205,7 @@
                                28 Лошадок и Симба
                             </a>
                         </h5>
-                        <p>Экскурсия Конный комплекс и зоопарк Симба с Новым поворотом </p>
+                        <p>Экскурсия Конный комплекс </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>  23 Января </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
@@ -229,7 +229,7 @@
                                 Зоопарк Харьков и Фентези парк
                             </a>
                         </h5>
-                        <p>Самый крутой зоопарк-сафари страны!</p>
+                        <p>Самый крутой зоопарк-сафари!</p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>  29 Января </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
@@ -255,7 +255,7 @@
                             </a>
                         </h5>
                         <p>
-                           Сырная ферма с дегустацией...
+                           Сырная ферма с дегустацией
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 13 февраля </span></li>
@@ -309,7 +309,7 @@
                             </a>
                         </h5>
                         <p>
-                            Только покоряя эти вершины...
+                            Только покоряя эти вершины 
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Декабрь 2021 - Март 2022 </span></li>
@@ -334,7 +334,7 @@
                                 Мурляндия
                             </a>
                         </h5>
-                        <p>Экскурсия в Лимонный сад с Новым поворотом </p>
+                        <p>Замурчательная экскурсия </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 15 Января 2022 </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
@@ -358,7 +358,7 @@
                                 Хортица
                             </a>
                         </h5>
-                        <p>Тайны и загадки родного острова Хортица... </p>
+                        <p>Тайны и загадки острова </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 12 Декабря </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
@@ -384,7 +384,7 @@
                             </a>
                         </h5>
                         <p>
-                          Экскурсия в благотворительный фонд помощи животным...
+                          Экскурсия в благотворительный фонд
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 28 Ноября </span></li>
@@ -486,7 +486,7 @@
                             </a>
                         </h5>
                         <p>
-                            Пешеходная экскурсия...
+                            Пешеходная экскурсия 
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 14 Октября </span></li>
@@ -513,7 +513,7 @@
                             </a>
                         </h5>
                         <p>
-                            Экскурсия с сырной дегустацией...
+                            Экскурсия с сырной дегустацией 
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 14 Октября </span></li>
@@ -540,7 +540,7 @@
                             </a>
                         </h5>
                         <p>
-                            Максимум от выходных...
+                            Максимум от выходных 
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>25-26 Сентября</span></li>
@@ -665,7 +665,7 @@
                             </a>
                         </h5>
                         <p>
-                            Животные Аскании ждут гостей...
+                            Животные Аскании ждут гостей 
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span> Под Заказ </span></li>
@@ -688,7 +688,7 @@
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Kharkov.html">Хлопковые Горы Харькова</a>
                         </h5>
-                        <p>Харьков из Запорожья...</p>
+                        <p>Харьков из Запорожья </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span> Под Заказ</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
@@ -710,7 +710,7 @@
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Georgia.html"> Походы по Грузии</a>
                         </h5>
-                        <p>Расписание походов по Грузии...</p>
+                        <p>Расписание походов по Грузии </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>2021 Год</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>9 Дней</span></li>
@@ -735,7 +735,7 @@
                             </a>
                         </h5>
                         <p>
-                            50 оттенков кофе Isla. Экскурсия и дегустация...
+                            50 оттенков кофе Isla 
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Под Заказ</span></li>
@@ -761,7 +761,7 @@
                             </a>
                         </h5>
                         <p>
-                            Фестиваль тюльпанов и экскурсия в Стамбуле...
+                            Фестиваль тюльпанов  в Стамбуле 
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>20-27 Апреля 2021 Года</span></li>
@@ -788,7 +788,7 @@
                             </a>
                         </h5>
                         <p>
-                            Экскурсия львы и лошади...
+                            Экскурсия львы и лошади 
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span> Под Заказ </span></li>
@@ -840,7 +840,7 @@
                             </a>
                         </h5>
                        <p>
-                            Праздник и мастер класс с Новым поворотом
+                            Праздник и мастер класс 
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Под Заказ</span></li>
@@ -889,7 +889,7 @@
                                 Букет к 8 марта
                             </a>
                         </h5>
-                        <p>Оригинальный подарок своими руками к 8 марта!</p>
+                        <p>Оригинальный подарок  к 8 марта!</p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Под Заказ</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
@@ -909,7 +909,7 @@
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Одесса</h6>
                         <h5 class="my-2"><a href="https://novipovorot.pp.ua/page-Odessa-on-march.html">Одесса</a></h5>
-                        <p>Одесса на 8 марта, юмор и колорит. Морской привет!</p>
+                        <p>Одесса на 8 марта, юмор и колорит </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Под Заказ</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span></li>
@@ -935,7 +935,7 @@
                             </a>
                         </h5>
                         <p>
-                           Рождество по-королевски. Белоснежный сахарный дворец Кенинга, Фентези парк Харкова и живая глина Опошни ...
+                           Рождество по-королевски 
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 7-8 Января </span></li>
@@ -960,7 +960,7 @@
                                Два зоопарка
                             </a>
                         </h5>
-                        <p>Еноты, львята, тигрята ... 2 зоопарка за 1 день! Экскурсия Центр Пылышенко и зоопарк Симба... </p>
+                        <p>Еноты, львята и тигрята  </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>31 Октября </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
@@ -1135,7 +1135,7 @@
                             </a>
                         </h5>
                         <p>
-                            Трогательный зоопарк и яхтклуб...
+                            Трогательный зоопарк и яхтклуб 
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 30 Октября </span></li>
@@ -1373,7 +1373,7 @@
    <!-- 
         ***  Популярные Направления  ***
      -->
-    <section class="destinations pt-2 pb-5" id="destinations">
+    <section class="destinations pt-3 pb-5" id="destinations">
         <div class="container py-xl-5 py-lg-3">
             <!--<h3 class="heading text-capitalize text-center" data-aos="zoom-in"> Популярные Направления</h3>-->
             <h3 class="heading text-capitalize text-center">Популярные Направления</h3>
