--- a/packages.html
+++ b/packages.html
@@ -157,7 +157,7 @@
                               Новогодние огни Днепра
                             </a>
                         </h5>
-                        <p>Круче чем в Париже! </p>
+                        <p>Лучшие новогодние украшения страны!</p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 16 Января </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
@@ -181,7 +181,7 @@
                                 Лимонарий
                             </a>
                         </h5>
-                        <p>Экскурсия в Лимонный сад </p>
+                        <p>Экскурсия в Лимонный сад, удивительное место</p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>  22 Января </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
@@ -275,7 +275,7 @@
                         <p><span class="fa fa-tags"></span> <span> 2995грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>  Каменец Подольский, Умань, Меджибош  </h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span> Каменец-П., Умань, Меджибош</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Kamyanets-podolsky.html">
                                Каменец Подольский и Умань
@@ -309,7 +309,7 @@
                             </a>
                         </h5>
                         <p>
-                            Только покоряя эти вершины 
+                            Только покоряя эти вершины, ощущаешь дух Карпат
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Декабрь 2021 - Март 2022 </span></li>
