--- a/packages.html
+++ b/packages.html
@@ -282,8 +282,8 @@
                                 Грузия лето
                             </a>
                         </h5>
-                        <p class="text-truncate">
-                            Теплое июльское море, красивейшие виды современного Батуми. Ароматы цветов и шашлыков , мм ... Это изюминки Грузии.
+                        <p>
+                            Теплое июльское море, красивейшие виды современного Батуми. 
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 2-9 Июля 2022 </span></li>
