--- a/packages.html
+++ b/packages.html
@@ -407,7 +407,7 @@
                             </a>
                         </h5>
                         <p>
-                          Экскурсия в благотворительный фонд
+                          Благотворительный фонд помощи животным
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 28 Ноября </span></li>
