--- a/packages.html
+++ b/packages.html
@@ -667,7 +667,7 @@
                             </a>
                         </h5>
                         <p>
-                            Животные Аскании ждут гостей 
+                            Аскания ждёт гостей 
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span> Под Заказ </span></li>
