--- a/packages.html
+++ b/packages.html
@@ -737,7 +737,7 @@
                             </a>
                         </h5>
                         <p>
-                            50 оттенков кофе Isla 
+                            50 оттенков кофе Isla. Экскурсия с дегустацией
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Под Заказ</span></li>
@@ -766,7 +766,7 @@
                             Фестиваль тюльпанов  в Стамбуле 
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>20-27 Апреля 2021 Года</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>20-27 Апреля 2021</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>7 Дней</span></li>
                         </ul>
                     </div>
@@ -1370,11 +1370,9 @@
             </div>
         </div>
     </section>
-    <!-- Туры -->
+    <!-- //Туры -->
 
-   <!-- 
-        ***  Популярные Направления  ***
-     -->
+    <!--   Популярные Направления  -->    
     <section class="destinations pt-3 pb-5" id="destinations">
         <div class="container py-xl-5 py-lg-3">
             <!--<h3 class="heading text-capitalize text-center" data-aos="zoom-in"> Популярные Направления</h3>-->
