--- a/packages.html
+++ b/packages.html
@@ -415,8 +415,7 @@
                         </ul>
                     </div>
                 </div>
-                <!--  //Дай лапу  --> 
-                                       
+                <!--  //Дай лапу  -->                                        
                
                 <!--  Пиво -->
                 <div class="col-lg-3 col-sm-6 mb-5">
@@ -962,7 +961,7 @@
                                Два зоопарка
                             </a>
                         </h5>
-                        <p>Еноты, львята и тигрята  </p>
+                        <p>Еноты, львята и тигрята, 2 зоопарка за 1 день  </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>31 Октября </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
