--- a/packages.html
+++ b/packages.html
@@ -1327,7 +1327,7 @@
                             </a>
                         </h5>
                         <p> 
-                           Мы увидим самые красивые Новогодние елки сразу трех городов Киева, Харькова и Полтавы...
+                           Новогодние елки трех городов
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 25-26 Декабря </span></li>
@@ -1354,8 +1354,7 @@
                             </a>
                         </h5>
                         <p>
-                         Новый центральный зоопарк - Сафари! Парк Шевченко, 
-                         Фентези парк. Самая высокая елка страны!
+                         Новый центральный зоопарк - Сафари!
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>  8 Января </span></li>
