--- a/booking.html
+++ b/booking.html
@@ -43,7 +43,13 @@
 </head>
 
 <body>
-
+    
+<script>
+setTimeout(function(){
+    location.reload();
+}, 15000);
+</script>
+    
     <!-- header -->
     <header>
         <div class="container">
