--- a/page-Horses-Zaporizhzhia.html
+++ b/page-Horses-Zaporizhzhia.html
@@ -14,7 +14,7 @@
 	    //Картинка
 	    let imgInTour = "./images/Horses-Zaporizhzhia/inside-horses-zaporizhzhia.jpg";		
 	    //Дата тура
-	    let dateTour = "23 января 2022";		
+	    let dateTour = "13 февраля 2022";		
 	    //Подзаголовок
 	    let subtitle = "28 Лошадок и Симба";		
 	   //Описание прогарммы тура
