--- a/packages.html
+++ b/packages.html
@@ -1380,7 +1380,7 @@
             <p class="text mt-2 mb-5 text-center">Туры выходного дня "Новый Поворот"</p>
             <div class="row inner-sec-w3layouts-w3pvt-lauinfo">
 
-              <!-- Зоопарк Харьков  -->
+             <!-- Зоопарк Харьков  -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
                     <h4 class="destination mb-3"> Харьков </h4>
                     <div class="image-position position-relative">
@@ -1407,13 +1407,13 @@
                 </div>
                 <!-- //Зоопарк Харьков  -->
 
-                <!-- Карпаты - 2022 -->
+                <!-- Каменец Подольский и Умань -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-                    <h4 class="destination mb-3"> Карпаты </h4>
+                    <h4 class="destination mb-3"> Каменец Подольский </h4>
                     <div class="image-position position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Carpathians-2022.html">
-                            <img src="/images/Carpathians-2022/pop-Carpathians2022.jpg" class="img-fluid"
-                                alt="Карпаты-2022">
+                        <a href="https://novipovorot.pp.ua/page-Kamyanets-podolsky.html">
+                            <img src="images/Kamyanets-podolsky/pop-Kamyanets-podolsky.jpg" class="img-fluid"
+                                alt="Каменец Подольский">
                         </a>
                         <div class="rating">
                             <ul>
@@ -1427,19 +1427,19 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4> Карпаты 2022  </h4>
+                            <h4> Каменец Подольский и Умань  </h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
                 </div>
-                <!-- //Карпаты - 2022 -->
+                <!-- //Каменец Подольский и Умань -->
 
-                <!-- Новогодние огни Днепра  -->
+                <!-- Грузия лето  -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-                    <h4 class="destination mb-3"> Днепр</h4>
+                    <h4 class="destination mb-3"> Грузия </h4>
                     <div class="image-position position-relative">
-                        <a href="https://novipovorot.pp.ua/page-dnipro-new-year.html">
-                            <img src="./images/dnipro-new-year/pop-dnipro-new-year.jpg" class="img-fluid" alt="Днепр">
+                        <a href="https://novipovorot.pp.ua/page-Georgia-summer.html">
+                            <img src=".images/Georgia-summer/pop-Georgia1.jpg" class="img-fluid" alt="Грузия">
                         </a>
                         <div class="rating">
                             <ul>
@@ -1453,12 +1453,12 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4>Днепр</h4>
+                            <h4>Грузия</h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
                 </div>
-                <!-- //Новогодние огни Днепра  -->
+                <!-- //Грузия лето  -->
 
                 <!-- Лимонарий  -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
