--- a/index.html
+++ b/index.html
@@ -488,11 +488,11 @@
 
                 <!-- Каменец Подольский и Умань -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-                    <h4 class="destination mb-3"> Каменец Подольский </h4>
+                    <h4 class="destination mb-3"> Каменец </h4>
                     <div class="image-position position-relative">
                         <a href="https://novipovorot.pp.ua/page-Kamyanets-podolsky.html">
                             <img src="images/Kamyanets-podolsky/pop-Kamyanets-podolsky.jpg" class="img-fluid"
-                                alt="Каменец Подольский">
+                                alt="Каменец ">
                         </a>
                         <div class="rating">
                             <ul>
@@ -518,7 +518,7 @@
                     <h4 class="destination mb-3"> Грузия </h4>
                     <div class="image-position position-relative">
                         <a href="https://novipovorot.pp.ua/page-Georgia-summer.html">
-                            <img src=".images/Georgia-summer/pop-Georgia1.jpg" class="img-fluid" alt="Грузия">
+                            <img src="images/Georgia-summer/pop-Georgia1.jpg" class="img-fluid" alt="Грузия">
                         </a>
                         <div class="rating">
                             <ul>
