--- a/page-Scythian-camp-Khortytsya.html
+++ b/page-Scythian-camp-Khortytsya.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
   
     <!-- Описание -->
-    <meta name="description" content="Туры выходного дня 'Новый поворот', ХОРТИЦА СКИФСКИЙ СТАН . ЯЙЦО ЖЕЛАНИЙ . КОЗАКИ В ДОЗОРЕ И ДЕНДРОПАК ! ЛАПИДАРИЙ И БЕКЕТ ! НОВАЯ ЭКСКУРСИЯ ПО ХОРТИЦЕ">
+    <meta name="description" content="Туры выходного дня 'Новый поворот', ХОРТИЦА СКИФСКИЙ СТАН .  ЛАПИДАРИЙ И БЕКЕТ ! ОСТРОВ РОЗСТЕБИН И МЕНОНИТСКИЙ МЕМОРИАЛ! НОВАЯ ЭКСКУРСИЯ ПО ХОРТИЦЕ !">
     <!-- //Описание -->
     <!-- Ключевые слова -->
     <meta name="keywords"
@@ -19,7 +19,7 @@
   
     <!-- Open Graph -->
     <meta property="og:title" content="Скифский стан Хортица">
-    <meta property="og:description" content="ХОРТИЦА СКИФСКИЙ СТАН. ЯЙЦО ЖЕЛАНИЙ. КОЗАКИ В ДОЗОРЕ И ДЕНДРОПАК! ЛАПИДАРИЙ И БЕКЕТ! НОВАЯ ЭКСКУРСИЯ ПО ХОРТИЦЕ" />
+    <meta property="og:description" content="ХОРТИЦА СКИФСКИЙ СТАН .  ЛАПИДАРИЙ И БЕКЕТ ! ОСТРОВ РОЗСТЕБИН И МЕНОНИТСКИЙ МЕМОРИАЛ! НОВАЯ ЭКСКУРСИЯ ПО ХОРТИЦЕ !" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://novipovorot.pp.ua/page-Scythian-camp-Khortytsya.html" />
     <meta property="og:image" content="images/Scythian-camp-Khortytsya/inside-Scythian-camp-Khortytsya.jpg">
@@ -129,14 +129,14 @@
                             <ul class="listing mt-3">
                                 <li>
                                     <!-- Дата -->
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel"> 14 октября 2021 </span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span class="dateOfTravel"> 5 февраля 2022 </span>
                                     <!-- //Дата -->
                                 </li>
                             </ul>
                         </div>
                             <!-- Подзаголовок -->
                             <h4 class="mb-3">
-                            ХОРТИЦА СКИФСКИЙ СТАН. ЯЙЦО ЖЕЛАНИЙ. КОЗАКИ В ДОЗОРЕ И ДЕНДРОПАК! ЛАПИДАРИЙ И БЕКЕТ! НОВАЯ ЭКСКУРСИЯ ПО ХОРТИЦЕ
+                            ХОРТИЦА СКИФСКИЙ СТАН .  ЛАПИДАРИЙ И БЕКЕТ ! ОСТРОВ РОЗСТЕБИН И МЕНОНИТСКИЙ МЕМОРИАЛ! НОВАЯ ЭКСКУРСИЯ ПО ХОРТИЦЕ 
                             </h4>
                             <!-- //Подзаголовок -->
                       
@@ -145,7 +145,7 @@
                             Сакральные места Хортицы с потрясающей энергетикой!  Святилища скифов, древнейшая дозорная вышка козаков - бекет. 
                             </p> 
                             <p class="txt-alg-jf">
-                            Ароматы луговых трав, степь усеянная стариннейшими курганами их возраст превышает Египетские пирамиды. 
+                            Степь усеянная стариннейшими курганами их возраст превышает Египетские пирамиды. 
                             </p>
                             <p class="txt-alg-jf">
                             По Вашим просьбам, новая экскурсия по лучшим местам Хортицы.
@@ -161,12 +161,12 @@
 
                             <span class="fa fa-info-circle"></span><strong> Информируем</strong><br /><br />
                             <span class="txt-alg-jf">
-                                Цена билета при брони до  10.10: взрослые 
+                                Цена билета при брони до  31.1: взрослые 
                                  <strong>  95 грн.</strong>,
                                    дети от 5 до 12 лет 
 				    <strong> 80 грн.</strong>; 
                                  <hr>
-                                 при брони с 11 до 13.10: взрослые 
+                                 при брони с 1 до 4.2 если будут места: взрослые 
                                  <strong> 105 грн.</strong>, 
                                    дети от 5 до 12 лет
                                  <strong> 95 грн.</strong>;
@@ -271,14 +271,14 @@
                                     data-parent="#accordionExample">
                                     <div class="card-body">
                                         
-                                        <p class="txt-alg-jf"> <strong> 11:30 </strong>
+                                        <p class="txt-alg-jf"> <strong> 11:00 </strong>
                                         сбор в р-не о.Хортица(дополнительно сообщаем всем кто записался на экскурсию за 2 дня до даты ) Минутка позитива и в путешествие.
                                          </p>
-                                         <p class="txt-alg-jf"> <strong> 11:35-14:30 </strong>
-                                         Вас ждет пешеходная экскурсия по самым древним местам Хортицы. Высшая точка с дозорным пунктом. Стариннейший скифский стан, где собраны все самые древние достопримечательности! 
-				         Лапидарий и курганы, яйцо желаний и козак в дозоре. Дендропарк и  Ароматная степь. Покрова на Хортице, проведите время с пользой! 
+                                         <p class="txt-alg-jf"> <strong> 11:05-15:00 </strong>
+                                         Вас ждет пешеходная экскурсия по самым древним местам Хортицы. Высшая точка с дозорным пунктом. Стариннейший скифский стан, 
+					 где собраны все самые древние достопримечательности! Лапидарий и курганы, сотов Розстебин и Менонитский мемориал. Проведите время с пользой! 
                                          </p>
-                                         <p class="txt-alg-jf"><strong> 14:35-15:00 </strong>
+                                         <p class="txt-alg-jf"><strong> 15:00-30 </strong>
                                             Довольные возвращаемся домой чтоб поделиться 
                                             впечатлениями с друзьями и близкими (но еще лучше их взять с собой).<br>
                                             Выкладываем сториз и посты в 
