--- a/page-3D-painting.html
+++ b/page-3D-painting.html
@@ -20,11 +20,13 @@
 	   //Описание прогарммы тура
 	   let tourProgramDescription = [
 		{program: 'Роспись объемных фигурок по самой необычной технике с профессиональным художником! '}, 
-	        {program: 'Реалистичные 3Д фигурки животных, это игрушка и сувенир. Масса позитива от их росписи обеспечена! Ждем Вас, Ваших родных, близких и друзей на Мк. Подойдет от 2 лет до 100 лет ) Детки и взрослые будут в восторге!  '}	   ];		
+	        {program: 'Реалистичные 3Д фигурки животных, это игрушка и сувенир. Масса позитива от их росписи обеспечена! Ждем Вас, Ваших родных, близких и друзей на Мк. Подойдет от 2 лет до 100 лет ) Детки и взрослые будут в восторге!  '}	   
+	   ];		
 	  //Информируем
           let inform = [
-		{informPrice: 'Цена билета при оплате до 31.01 : 250 грн.}, 
-	        {informPrice: 'С 01.02 если будут места: 270 грн.'} 	   ];	
+		{informPrice: 'Цена билета при оплате до 31.01 : 250 грн.'}, 
+	        {informPrice: 'С 01.02 если будут места: 270 грн.'} 	   
+	  ];	
 	   //Стоимость
 	   let price = "250 Грн.";		
 	   //Продолжительность
@@ -42,7 +44,8 @@
 	   ];	
 	  //В стоимость не входит
 	  let priceDoesNotInclude = [
-		{doesNotIncludePrice: 'Проезд до места встречи группы и обратно'}	   ];	
+		{doesNotIncludePrice: 'Проезд до места встречи группы и обратно'}	   
+	  ];	
 	  //Тексты подсказок
 	  let helpTexts = [
 		{badge: 'Запорожье'}, 
