--- a/booking.html
+++ b/booking.html
@@ -144,17 +144,19 @@
                                     
                                     <option>Грузия лето</option>
                                     <option>Зоопарк Харьков и Фентези Парк</option>
+                                    <option>Сырная ферма с дегустацией</option>
+                                    <option>Скифский стан</option>
+                                    <option>3Д роспись Зоопарк</option>
+                                    <option>Лимонарий</option>
                                     <option>Каменец Подольский и Умань</option>
                                     <option>28 Лошадок и Симба</option>
                                     <option>Харьков Рождество</option>
                                     <option>Арабатские термы</option>
                                     <option>Рождество по-Королевски</option>
-                                    <option>Лимонарий</option>
                                     <option>Карпаты 2022</option>
                                     <option>Новогодние огни Днепра</option>
                                     <option>Мурляндия</option>
                                     <option>Киев. Харьков. Полтава</option>
-                                    <option>Сырная ферма с дегустацией</option>
                                     <option>Хортица</option>
                                     <option>Харьков. Бал Хризантем</option>
                                     <option>VILLA DEL VINO</option>
