--- a/packages.html
+++ b/packages.html
@@ -180,7 +180,7 @@
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-3D-painting.html">
-                              Роспись объемных фигурок по самой необычной технике с профессиональным художником!
+                              3 D роспись Зоопарк 
                             </a>
                         </h5>
                         <p>
